[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Tiles/ConstructWallTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Nodes/AnimatedAutotile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Building/ConstructWall.gd" type="Script" id=3]
[ext_resource path="res://GUI/Handles/Handles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Building/Components/GridHighlight.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Themes/Theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Sprites/GUI/icon_check.png" type="Texture" id=7]

[node name="ConstructWall" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_set = ExtResource( 1 )

[node name="Handles" parent="." instance=ExtResource( 4 )]

[node name="GridHighlight" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.823529, 0.219608, 0.262745, 1 )

[node name="AddButton" type="Button" parent="GridHighlight"]
modulate = Color( 0.760784, 0.847059, 0.619608, 0 )
margin_left = -14.0
margin_top = -45.0
margin_right = 14.0
margin_bottom = -20.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GridHighlight/AddButton"]
position = Vector2( 14, 10 )
texture = ExtResource( 7 )

[connection signal="handle_drag_released" from="Handles" to="." method="_on_handle_drag_released"]
[connection signal="pressed" from="GridHighlight/AddButton" to="." method="_on_AddButton_pressed"]
